--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -11,7 +11,16 @@ tags:
 ---
 
 ## LR数学原理
-LR的数学原理在
+LR数学原理主要涉及LR数学模型的搭建以及模型参数的确定。
+
+### LR数学模型的搭建
+从概率的角度来看输出结果，即考虑输出结果的不确定性，我们使用$sigmoid$函数来作为LR输出的激活函数，$sigmoid$如下所示：
+
+$$ h_ \theta (x) = \frac{\mathrm{1} }{\mathrm{1} + e^- \theta^Tx } $$
+
+其中，$sigmoid$的取值范围：$$ 0 \le h_ \theta (x) \le 1 $$
+
+
 
 ## LR python实现
 <details>
@@ -20,8 +29,4 @@ LR的数学原理在
   <p> 测试二 测试三 。。。。。 .</p>
 </details>
 
-安装好jekyll后，需要与自己注册好的GitHub账号进行连接，[解决github Permission denied (publickey)问题](https://www.jianshu.com/p/f22d02c7d943)
-
-## 托管jekyll到GitHub
-最后，将jekyll托管到GitHub中去，[将站点托管到Github](https://my.oschina.net/sqmax/blog/1622156)
 ---
