--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -16,7 +16,9 @@ LR数学原理主要涉及LR数学模型的搭建以及模型参数的确定。
 ### LR数学模型的搭建
 从概率的角度来看输出结果，即考虑输出结果的不确定性，我们使用$sigmoid$函数来作为LR输出的激活函数，$sigmoid$如下所示：
 
-$$ h_ \theta (x) = \frac{\mathrm{1} }{\mathrm{1} + e^- \theta^Tx } $$
+$$
+ h_ \theta (x) = \frac{\mathrm{1} }{\mathrm{1} + e^- \theta^Tx }
+$$
 
 其中，$sigmoid$的取值范围：$$ 0 \le h_ \theta (x) \le 1 $$
 
