--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -5,6 +5,7 @@ subtitle: 'The Mathematical Principles and Python Implementation of LR'
 author: "Quanli"
 header-style: text
 catalog: true
+mathjax: true
 tags:
   - machine learning
   - logistic regression
