--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -34,18 +34,21 @@ LR通过对比两个条件概率值的大小，将实例$x$分到概率值较大
 #### 模型参数估计
 通过最大似然估计发来估计模型参数，从而得到LR模型。
 设：
+
 $$P(Y=1|x)=\pi(x)$$
 $$P(Y=0|x)=1-\pi(x)$$
 
 似然函数为：
-$$\prod_{i-1}^{N}\[\pi(x_i)\]^y_i\[1-\pi(x_i)\]^{1-y_i}
+
+$$\prod_{i-1}^{N}\[\pi(x_i)\]^y_i\[1-\pi(x_i)\]^{1-y_i} $$
 
 对数似然函数为：
+
 $$
 \begin{align}
-L(\omega)&=\sum_{i-1}^{N}\[y_ilog\pi(x_i)+(1-y_i)log(1-\pi(x_i))\]
-&=\sum_{i=1}^{N}\left[y_ilog\frac{\pi(x_i)}{1-\pi(x_i)}+log(1-\pi(x_i)\right]
-&=\sum_{i=1}^{N}\[y_i(\omega\cdotx_i)-log(1+exp(\omega\cdotx_i))\]
+L(\omega)&=\sum_{i-1}^{N}[y_ilog\pi(x_i)+(1-y_i)log(1-\pi(x_i))]  \\
+&=\sum_{i=1}^{N}\left[y_ilog\frac{\pi(x_i)}{1-\pi(x_i)}+log(1-\pi(x_i)\right] \\
+&=\sum_{i=1}^{N}[y_i(\omega\cdotx_i)-log(1+exp(\omega\cdotx_i))]
 \end{align}
 $$
 
