--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -25,8 +25,11 @@ $$
 
 #### Logistic Regression(LR)
 二项LR是如下的条件概率分布：
+
 $$P(Y=1|x)=\frac{exp(\omega \cdot x + b)}{1 + exp(\omega \cdot x + b)}$$
+
 $$P(Y=0|x)=\frac{\mathrm{1}}{1 + exp(\omega \cdot x + b)}$$
+
 $x\in \mathbf{R}^n$是输入，$Y\in\{0,1\}$是输出，$\omega \in \mathbf{R}^n$和$b \in \mathbf{R}$是参数，$\omega$是权值向量，$b$是偏置，$\omega \cdot x$为$\omega$和$x$的内积。
 
 LR通过对比两个条件概率值的大小，将实例$x$分到概率值较大的那一类。
@@ -36,11 +39,12 @@ LR通过对比两个条件概率值的大小，将实例$x$分到概率值较大
 设：
 
 $$P(Y=1|x)=\pi(x)$$
+
 $$P(Y=0|x)=1-\pi(x)$$
 
 似然函数为：
 
-$$\prod_{i-1}^{N}\[\pi(x_i)\]^y_i\[1-\pi(x_i)\]^{1-y_i} $$
+$$\prod_{i-1}^{N}[\pi(x_i)]^y_i[1-\pi(x_i)]^{1-y_i} $$
 
 对数似然函数为：
 
@@ -48,7 +52,7 @@ $$
 \begin{align}
 L(\omega)&=\sum_{i-1}^{N}[y_ilog\pi(x_i)+(1-y_i)log(1-\pi(x_i))]  \\
 &=\sum_{i=1}^{N}\left[y_ilog\frac{\pi(x_i)}{1-\pi(x_i)}+log(1-\pi(x_i)\right] \\
-&=\sum_{i=1}^{N}[y_i(\omega\cdotx_i)-log(1+exp(\omega\cdotx_i))]
+&=\sum_{i=1}^{N}[y_i(\omega \cdot x_i)-log(1+exp(\omega \cdot x_i))]
 \end{align}
 $$
 
