update-LR-python-implementation

--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -51,7 +51,7 @@ $$\prod_{i-1}^{N}[\pi(x_i)]^y_i[1-\pi(x_i)]^{1-y_i} $$
 $$
 \begin{align}
 L(\omega)&=\sum_{i-1}^{N}[y_ilog\pi(x_i)+(1-y_i)log(1-\pi(x_i))]  \\
-&=\sum_{i=1}^{N}\left[y_ilog\frac{\pi(x_i)}{1-\pi(x_i)}+log(1-\pi(x_i)\right] \\
+&=\sum_{i=1}^{N}\left[y_ilog\frac{\pi(x_i)}{1-\pi(x_i)}+log(1-\pi(x_i))\right] \\
 &=\sum_{i=1}^{N}[y_i(\omega \cdot x_i)-log(1+exp(\omega \cdot x_i))]
 \end{align}
 $$
@@ -62,7 +62,10 @@ $$
 
 ## LR python实现
 <details>
-  <summary>点击时的区域标题</summary>
+  <summary>Python实现LR</summary>
+```
+hhh
+```
   <p> - 测试 测试测试</p>
   <p> 测试二 测试三 。。。。。 .</p>
 </details>
