update-LR-python-implementaion

--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -61,9 +61,14 @@ $$
 因此，问题变成了以对数似然函数为目标函数的最优化问题，LR学习中通常采用的方法是梯度下降法及拟牛顿法。
 
 ## LR python实现
+```js
+	hhh
+	aaa
+	aaaa
+```
 <details>
   <summary>Python实现LR</summary>
-```
+```js
 hhh
 ```
   <p> - 测试 测试测试</p>
