update-LR-python-implementation

--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -60,19 +60,35 @@ $$
 
 因此，问题变成了以对数似然函数为目标函数的最优化问题，LR学习中通常采用的方法是梯度下降法及拟牛顿法。
 
-## LR python实现
+## [LR python实现](https://blog.csdn.net/zouxy09/article/details/20319673)
+首先实现$sigmoid$函数：
+
 ```js
-	hhh
-	aaa
-	aaaa
+def sigmoid(x):
+    return 1. / (1+exp(-x))
 ```
-<details>
-  <summary>Python实现LR</summary>
+
+接着，梯度下降如下所示：
+
 ```js
-hhh
+def gradientDescent(train_x, train_y):
+    weights = numpy.ones((numFeatures, 1))
+    
+    output = sigmoid(train_x * weights)
+    error = train_y - output
+    weights = weights + alpha * train_x.transpose() * error
 ```
-  <p> - 测试 测试测试</p>
-  <p> 测试二 测试三 。。。。。 .</p>
-</details>
+
+随机梯度下降如下所示：
+
+```js
+def stocGradientDescent(train_x, train_y):
+    weights = numpy.ones((numFeatures, 1))
+
+    for i in range(numSamples):
+        output = sigmoid(train_x[i, :] * weights)
+        error = train_y[i, 0] - output
+        weights = weights + alpha * train_x[i, :].transpose() * error
+```
 
 ---
