update-LR-python-implementation

--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -58,6 +58,15 @@ $$
 
 对$L(\omega)$求极大值，得到$\omega$的估计值。
 
+$$
+\begin{align}
+\frac{\partial L(\omega)}{\partial \omega} &= \sum_{i=1}^{N} y_ix_i - \sum_i^N \frac{e^{\omega ^ T x_i}}{1 + e^{\omega ^ T x_i}}  \\
+&=\sum_{i=1}^{N}(y_i - \sigma (\omega x_i))x_i
+\end{align}
+$$
+
+此式没有解析解，因此需要使用迭代法，借助梯度下降法。
+
 因此，问题变成了以对数似然函数为目标函数的最优化问题，LR学习中通常采用的方法是梯度下降法及拟牛顿法。
 
 ## [LR python实现](https://blog.csdn.net/zouxy09/article/details/20319673)
