update-LR-python-implementation

--- a/_posts/2018-11-19-ml-lr.md
+++ b/_posts/2018-11-19-ml-lr.md
@@ -60,8 +60,8 @@ $$
 
 $$
 \begin{align}
-\frac{\partial L(\omega)}{\partial \omega} &= \sum_{i=1}^{N} y_ix_i - \sum_i^N \frac{e^{\omega ^ T x_i}}{1 + e^{\omega ^ T x_i}}  \\
-&=\sum_{i=1}^{N}(y_i - \sigma (\omega x_i))x_i
+\frac{\partial L(\omega)}{\partial \omega} &= \sum_{i=1}^{N} y_ix_i - \sum_i^N \frac{e^{\omega \cdot x_i}}{1 + e^{\omega \cdot x_i}}  \\
+&=\sum_{i=1}^{N}(y_i - \sigma (\omega \cdot x_i))x_i
 \end{align}
 $$
 
