--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -47,6 +47,6 @@ $$
 P(X=x_i, Y=y_j)=p_{ij}, \quad i=1,2, \cdots ,n; \quad j=1,2, \cdots ,m
 $$
 
-条件熵$H(Y|X)$表示在已知随机变量$X$的条件下随机变量$Y$的不确定性。
+条件熵$H(Y\|X)$表示在已知随机变量$X$的条件下随机变量$Y$的不确定性。
 
 ---
