--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -49,4 +49,39 @@ $$
 
 条件熵$H(Y\|X)$表示在已知随机变量$X$的条件下随机变量$Y$的不确定性。
 
+随机变量$X$给定的条件下随机变量$Y$的条件熵$H(Y\|X)$，定义为$X$给定条件下$Y$的条件概率分布的熵对$X$的数学期望：
+
+$$
+H(Y\|X)=\sum_{i-1}^{N}p_iH(Y\|X=x_i)
+$$
+
+这里，$p_i=P(X=x_i), \quad i=1, 2, \cdots , N$
+
+#### 经验熵、经验条件熵
+当熵和条件熵中的概率由数据估计（特别是极大似然估计）得到时，所对应的熵和条件熵分别称为经验熵和经验条件熵。
+
+### 信息增益
+定义：特征$A$对训练数据集$D$的信息增益$g(D,A)$，定义为集合$D$的经验熵$H(D)$与特征$A$给定条件下$D$的经验条件熵$H(D\|A)$之差，即：
+
+$$
+g(D,A)=H(D)-H(D\|A)
+$$
+
+决策树学习应用信息增益准则选择特征，给定训练数据集$D$和特征$A$，经验熵$H(D)$表示数据集$D$进行分类的不确定性。而经验条件熵$H(D\|A)$表示在特征$A$给定的条件下对数据集$D$进行分类的不确定性，那么它们的差，即信息增益，就表示由于特征$A$而使得对数据集$D$的分类的不确定性，那么它们的差，即信息增益，表示由于特征$A$而使得对数据集$D$的分类的不确定性减少的程度。
+
+显然，对于数据集$D$而言，信息增益依赖于特征，不同的特征往往具有不同的信息增益。信息增益大的特征具有更强的分类能力。
+
+
+根据信息增益准则的特征选择方法是：对训练数据集（或子集）$D$，计算其每个特征的信息增益，并比较它们的大小，选择信息增益最大的特征。
+
+### 信息增益比
+以信息增益作为划分训练数据集的特征，存在偏向于选择取值较多的特征的问题，使用信息增益比可以修正该问题。
+
+定义：特征$A$对训练数据集$D$的信息增益比$g_R(D,A)$定义为其信息增益$g(D,A)$与训练数据集$D$关于特征$A$的值的熵$H_A(D)$之比，即：
+
+$$
+g_R(D, A)=\frac{g(D,A)}{H_A(D)}
+$$
+
+其中，$H_A(D)=-\sum_{i=1}^N \frac{\|D_i\|}{\|D\|}log_2 \frac{\|D_i\|}{\|D\|}$，$n$是特征$A$取值的个数。
 ---
