--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -52,7 +52,7 @@ $$
 随机变量$X$给定的条件下随机变量$Y$的条件熵$H(Y\|X)$，定义为$X$给定条件下$Y$的条件概率分布的熵对$X$的数学期望：
 
 $$
-H(Y\|X)=\sum_{i-1}^{N}p_iH(Y\|X=x_i)
+H(Y|X)=\sum_{i-1}^{N}p_iH(Y|X=x_i)
 $$
 
 这里，$p_i=P(X=x_i), \quad i=1, 2, \cdots , N$
@@ -64,7 +64,7 @@ $$
 定义：特征$A$对训练数据集$D$的信息增益$g(D,A)$，定义为集合$D$的经验熵$H(D)$与特征$A$给定条件下$D$的经验条件熵$H(D\|A)$之差，即：
 
 $$
-g(D,A)=H(D)-H(D\|A)
+g(D,A)=H(D)-H(D|A)
 $$
 
 决策树学习应用信息增益准则选择特征，给定训练数据集$D$和特征$A$，经验熵$H(D)$表示数据集$D$进行分类的不确定性。而经验条件熵$H(D\|A)$表示在特征$A$给定的条件下对数据集$D$进行分类的不确定性，那么它们的差，即信息增益，就表示由于特征$A$而使得对数据集$D$的分类的不确定性，那么它们的差，即信息增益，表示由于特征$A$而使得对数据集$D$的分类的不确定性减少的程度。
@@ -84,4 +84,5 @@ g_R(D, A)=\frac{g(D,A)}{H_A(D)}
 $$
 
 其中，$H_A(D)=-\sum_{i=1}^N \frac{\|D_i\|}{\|D\|}log_2 \frac{\|D_i\|}{\|D\|}$，$n$是特征$A$取值的个数。
+
 ---
