--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -89,48 +89,17 @@ $$
 
 ### C4.5的生成算法
 
-$$
-\begin{algorithm}
-        \caption{用归并排序求逆序数}
-        \begin{algorithmic}[1] %每行显示行号
-            \Require $Array$数组，$n$数组大小
-            \Ensure 逆序数
-            \Function {MergerSort}{$Array, left, right$}
-                \State $result \gets 0$
-                \If {$left < right$}
-                    \State $middle \gets (left + right) / 2$
-                    \State $result \gets result +$ \Call{MergerSort}{$Array, left, middle$}
-                    \State $result \gets result +$ \Call{MergerSort}{$Array, middle, right$}
-                    \State $result \gets result +$ \Call{Merger}{$Array,left,middle,right$}
-                \EndIf
-                \State \Return{$result$}
-            \EndFunction
-            \State
-            \Function{Merger}{$Array, left, middle, right$}
-                \State $i\gets left$
-                \State $j\gets middle$
-                \State $k\gets 0$
-                \State $result \gets 0$
-                \While{$i<middle$ \textbf{and} $j<right$}
-                    \If{$Array[i]<Array[j]$}
-                        \State $B[k++]\gets Array[i++]$
-                    \Else
-                        \State $B[k++] \gets Array[j++]$
-                        \State $result \gets result + (middle - i)$
-                    \EndIf
-                \EndWhile
-                \While{$i<middle$}
-                    \State $B[k++] \gets Array[i++]$
-                \EndWhile
-                \While{$j<right$}
-                    \State $B[k++] \gets Array[j++]$
-                \EndWhile
-                \For{$i = 0 \to k-1$}
-                    \State $Array[left + i] \gets B[i]$
-                \EndFor
-                \State \Return{$result$}
-            \EndFunction
-        \end{algorithmic}
-    \end{algorithm}
-$$
+```js
+*C4.5的生成算法*
+输入：训练数据集$D$，特征集$A$，阈值$\varepsilon$；
+输出：决策树$T$。
+（1）如果$D$中所有实例属于同一类$C_k$，则置$T$为单结点树，并将$C_k$作为该结点的类，返回$T$；
+（2）如果$A=\varnothing$，则置$T$为单结点树，并将$D$中实例数最大的类$C_k$作为该结点的类，返回$T$；
+（3）否则，计算$A$中各特征对$D$的信息增益比，选择信息增益比最大的特征$A_g$；
+（4）如果$A_g$的信息增益比小于阈值$\varepsilon$，则置$T$为单结点树，并将$D$中实例数最大的类$C_k$作为该节点的类，返回$T$；
+（5）否则，对$A_g$的每一可能值$a_i$，依$A_g=a_i$将$D$分割为子集若干非空$D_i$，将$D_i$中实例数最大的类作为标记，构建子结点，由结点及其子结点构成树$T$，返回$T$；
+（6）对结点$i$，以$D_i$为训练集，以$A-{A_g}$为特征集，递归地调用步（1）$\sim$步（5）
+```
+
+
 ---
