--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -89,15 +89,21 @@ $$
 
 ### C4.5的生成算法
 
-*C4.5的生成算法*
+**C4.5的生成算法**
+
 输入：训练数据集$D$，特征集$A$，阈值$\varepsilon$；
+
 输出：决策树$T$。
+
 （1）如果$D$中所有实例属于同一类$C_k$，则置$T$为单结点树，并将$C_k$作为该结点的类，返回$T$；
+
 （2）如果$A=\varnothing$，则置$T$为单结点树，并将$D$中实例数最大的类$C_k$作为该结点的类，返回$T$；
+
 （3）否则，计算$A$中各特征对$D$的信息增益比，选择信息增益比最大的特征$A_g$；
+
 （4）如果$A_g$的信息增益比小于阈值$\varepsilon$，则置$T$为单结点树，并将$D$中实例数最大的类$C_k$作为该节点的类，返回$T$；
+
 （5）否则，对$A_g$的每一可能值$a_i$，依$A_g=a_i$将$D$分割为子集若干非空$D_i$，将$D_i$中实例数最大的类作为标记，构建子结点，由结点及其子结点构成树$T$，返回$T$；
+
 （6）对结点$i$，以$D_i$为训练集，以$A-{A_g}$为特征集，递归地调用步（1）$\sim$步（5）
-
-
 ---
