update-DT-algorithm

--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -98,4 +98,34 @@ $$
 （4）如果$A_g$的信息增益比小于阈值$\varepsilon$，则置$T$为单结点树，并将$D$中实例数最大的类$C_k$作为该节点的类，返回$T$；  
 （5）否则，对$A_g$的每一可能值$a_i$，依$A_g=a_i$将$D$分割为子集若干非空$D_i$，将$D_i$中实例数最大的类作为标记，构建子结点，由结点及其子结点构成树$T$，返回$T$；  
 （6）对结点$i$，以$D_i$为训练集，以$A-{A_g}$为特征集，递归地调用步（1）$\sim$步（5）  
+
+## 决策树的剪枝
+
+决策树的剪枝往往通过极小化决策树整体的损失函数来实现，设树$T$的叶节点个数为$\|T\|$，$t$是树$T$的叶结点，该叶结点有$N_t$个样本结点，其中$k$类的样本点有$N_{tk}$个，$k=1,2, \cdots ,K$，$H_t(T)$为叶结点$t$上到的经验熵，$\alpha \ge 0$为参数，则决策树学习的损失函数可定义为：
+
+$$
+C_{\alpha}(T)=\sum_{t-1}^{\|T\|}N_tH_t(T)+ \alpha |T|
+$$
+
+其中经验熵为：
+
+$$
+H_t(T)=-\sum_{k} \frac{N_{tk}}{N_t}log \frac{N_{tk}}{N_t}
+$$
+
+其中：
+
+$$
+C(T)=\sum_{t-1}^{\|T\|}N_tH_t(T)=-\sum_{t-1}^{\|T\|}\sum_{k=1}{K}N_{tk} log \frac{N_{tk}}{N_t}
+$$
+
+这时有：
+
+$$
+C_{\alpha}(T)=C(T)+ \alpha |T|
+$$
+
+
+
+
 ---
