update-DT-algorithm

--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -104,7 +104,7 @@ $$
 决策树的剪枝往往通过极小化决策树整体的损失函数来实现，设树$T$的叶节点个数为$\|T\|$，$t$是树$T$的叶结点，该叶结点有$N_t$个样本结点，其中$k$类的样本点有$N_{tk}$个，$k=1,2, \cdots ,K$，$H_t(T)$为叶结点$t$上到的经验熵，$\alpha \ge 0$为参数，则决策树学习的损失函数可定义为：
 
 $$
-C_{\alpha}(T)=\sum_{t-1}^{\|T\|}N_tH_t(T)+ \alpha |T|
+C_{\alpha}(T)=\sum_{t-1}^{|T|}N_tH_t(T)+ \alpha |T|
 $$
 
 其中经验熵为：
@@ -116,7 +116,7 @@ $$
 其中：
 
 $$
-C(T)=\sum_{t-1}^{\|T\|}N_tH_t(T)=-\sum_{t-1}^{\|T\|}\sum_{k=1}{K}N_{tk} log \frac{N_{tk}}{N_t}
+C(T)=\sum_{t-1}^{|T|}N_tH_t(T)=-\sum_{t-1}^{|T|}\sum_{k=1}^{K}N_{tk} log \frac{N_{tk}}{N_t}
 $$
 
 这时有：
@@ -126,6 +126,12 @@ C_{\alpha}(T)=C(T)+ \alpha |T|
 $$
 
 
+## Python实现
 
+在此使用Python实现CART算法
+
+```js
+
+```
 
 ---
