--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -128,10 +128,5 @@ $$
 
 ## Python实现
 
-在此使用Python实现CART算法
-
-```js
-
-```
-
+[参考网址](https://blog.csdn.net/u014688145/article/details/53326910)
 ---
