--- a/_posts/2018-11-20-ml-dt.md
+++ b/_posts/2018-11-20-ml-dt.md
@@ -128,5 +128,6 @@ $$
 
 ## Python实现
 
-[参考网址](https://blog.csdn.net/u014688145/article/details/53326910)
+[参考网址1](https://blog.csdn.net/u014688145/article/details/53326910)
+[参考网址2](https://blog.csdn.net/ggwcr/article/details/78170534)
 ---
