--- a/_posts/2018-11-21-ml-svm.md
+++ b/_posts/2018-11-21-ml-svm.md
@@ -28,7 +28,7 @@ $$
 定义超平面$(\omega, b)$关于训练数据集$T$的函数间隔为超平面$(\omega,b)$关于$T$中所有样本点$(x_i, y_i)$的函数间隔最小值，即：
 
 $$
-\hat{\gamma}=min_{i=1,\cdots,N}\hat{\gamma}_i
+\hat{\gamma}={min}_{i=1,\cdots,N}\hat{\gamma}_i
 $$
 
 ---
