--- a/_posts/2018-11-21-ml-svm.md
+++ b/_posts/2018-11-21-ml-svm.md
@@ -31,4 +31,26 @@ $$
 \hat{\gamma}={min}_{i=1,\cdots,N}\hat{\gamma}_i
 $$
 
+**几何间隔** 对于给定的训练数据集$T$和超平面$(\omega,b)$，定义超平面$(\omega,b)$关于样本点$(x_i,y_i)$的几何间隔为：
+
+$$
+\gamma_i=y_i \left(\frac{\omega}{||\omega||} \cdot x_i + \frac{b}{||\omega||} \right)
+$$
+
+定义超平面$(\omega, b)$关于训练数据集$T$的几何间隔为超平面$(\omega,b)$关于$T$中所有样本点$(x_i,y_i)$的几何间隔的最小值，即：
+
+$$
+\gamma={min}_{i=1,\cdots,N} \gamma_i
+$$
+
+
+### 间隔最大化
+支持向量机学习是求解能够正确划分训练数据集并且几何间隔最大的分离超平面。
+
+
+
+
+
+
+
 ---
