--- a/_posts/2018-11-21-ml-svm.md
+++ b/_posts/2018-11-21-ml-svm.md
@@ -52,7 +52,7 @@ $$
 具体地，可以表示为下面的约束最优化问题：
 
 $$
-\bagin{align}
+\begin{align}
 & {max}_{\omega,b} \quad \gamma \\
 & s.t. \quad y_i\left( \frac{\omega}{||\omega||} \cdot x_i + \frac{b}{||\omega||} \right) \ge \gamma, \quad i=1,2,\cdots,N
 \end{align}
@@ -64,19 +64,19 @@ $$
 
 $$
 \begin{align}
-& {max}_{\omega, b} \quad \frac{\hat{\gamma}}{||\omega||}
+& {max}_{\omega, b} \quad \frac{\hat{\gamma}}{||\omega||} \\
 & s.t. \quad y_i(\omega \cdot x_i + b) \ge \hat{\gamma}, \quad i=1,2,\cdots,N
 \end{align}
 $$
 
 
-函数间隔$\hat{\gamma}$的取值并不影响最优化问题的解。事实上，假设将$\omega$和$b$按比例改成$\lambda \omega$和$\lambda \b$，这时函数间隔成为$\lambda \hat{\gamma}$，这对最优化问题的不等式约束没有影响，对目标函数的优化也没有影响。因此，将$\hat{\gamma}$=1代入上式。另外，最大化$\frac{\mathrm{1}}{\|\| \omega \|\|}和最小化$\frac{\mathrm{1}}{\mathrm{2}}\|\|\omega\|\|^2$是等价的。
+函数间隔$\hat{\gamma}$的取值并不影响最优化问题的解。事实上，假设将$\omega$和$b$按比例改成$\lambda \omega$和$\lambda \b$，这时函数间隔成为$\lambda \hat{\gamma}$，这对最优化问题的不等式约束没有影响，对目标函数的优化也没有影响。因此，将$\hat{\gamma}$=1代入上式。另外，最大化$\frac{\mathrm{1}}{\|\| \omega \|\|}$和最小化$\frac{\mathrm{1}}{\mathrm{2}}\|\|\omega\|\|^2$是等价的。
 
 经过上述变化后，最优化问题转变成：
 
 $$
 \begin{align}
-& {min}_{\omega, b} \quad \frac{1}{2}|| omega ||^2
+& {min}_{\omega, b} \quad \frac{1}{2}|| omega ||^2  \\
 & s.t. \quad y_i(\omega \cdot x_i + b) - 1 \ge 0, \quad i=1,2, \cdots, N
 \end{align}
 $$
