--- a/_posts/2018-11-21-ml-svm.md
+++ b/_posts/2018-11-21-ml-svm.md
@@ -76,7 +76,7 @@ $$
 
 $$
 \begin{align}
-& {min}_{\omega, b} \quad \frac{1}{2}|| omega ||^2  \\
+& {min}_{\omega, b} \quad \frac{1}{2}|| \omega ||^2  \\
 & s.t. \quad y_i(\omega \cdot x_i + b) - 1 \ge 0, \quad i=1,2, \cdots, N
 \end{align}
 $$
